@@ -1,5 +1,7 @@
 *SVN*
 
+* Make update_code and symlink a macro task under the name "update" for easy of deploy to servers that does not run fcgis [DHH]
+
 * Changed setup, update_code, rollback_code, and symlink to work on all servers instead of only those in the :app, :web, and :db roles. A server can opt out of being part of the release deployment by setting :no_release => true [DHH]
 
 * Added support for :except on task declarations as the opposite of :only [DHH]. Example:
